SERVER-83829 Defer WCE errors for WriteWithoutShardKeyWithId (#17930)

GitOrigin-RevId: 2a53d7cb226d1912f154aa59563759148795f28a